fix: refactoriza el manejo de paginación en los servicios de búsqueda usando PaginationUtils